nodejs-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nodejs-backend
  name: nodejs-backend
  namespace: tsic2-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nodejs-backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: nodejs-backend
    spec:
      containers:
        - env:
            - name: NODEJS_MONGODB_PASSWORD
              value: password
            - name: NODEJS_MONGODB_SCHEME
              value: mongodb
            - name: NODEJS_MONGODB_SERVICE_PORT
              value: mongodb:27017
            - name: NODEJS_MONGODB_USERNAME
              value: admin
          image: redrichard/nodejs-express:1.0
          name: nodejs-backend
          ports:
            - containerPort: 9000
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nodejs-backend
  name: nodejs-backend
  namespace: tsic2-ns
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: nodejs-backend
  type: LoadBalancer
status:
  loadBalancer: {}
