react-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: react-frontend
  name: react-frontend
  namespace: tsic2-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: react-frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: react-frontend
    spec:
      containers:
        - env:
            - name: REACT_APP_BACKEND_URL
              value: http://localhost:9000
          image: redrichard/reactjs-mern-stack:1.0
          name: react-frontend
          ports:
            - containerPort: 3000
          resources: {}
          tty: true
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: react-frontend
  name: react-frontend
  namespace: tsic2-ns
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
      nodePort: 30000
  selector:
    io.kompose.service: react-frontend
  type: LoadBalancer

status:
  loadBalancer: {}
