ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: "api.app.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nodejs-backend
                port:
                  number: 9000
    - host: "www.app.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: react-frontend
                port:
                  number: 3000
